[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/scenes/levels/Level1.res" type="PackedScene" id=1]
[ext_resource path="res://assets/scenes/objects/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/scripts/Levels.gd" type="Script" id=3]
[ext_resource path="res://assets/scenes/levels/Level2.res" type="PackedScene" id=4]
[ext_resource path="res://assets/scripts/Game.gd" type="Script" id=5]
[ext_resource path="res://assets/scenes/levels/Level3.res" type="PackedScene" id=6]
[ext_resource path="res://assets/audio/Music/game_loop.mp3" type="AudioStream" id=7]
[ext_resource path="res://assets/audio/Music/spirit_mode.mp3" type="AudioStream" id=8]
[ext_resource path="res://assets/scripts/MusicManager.gd" type="Script" id=9]
[ext_resource path="res://assets/scenes/levels/PauseMenu.tscn" type="PackedScene" id=10]

[node name="Game" type="Node2D"]
script = ExtResource( 5 )
pauseScene = ExtResource( 10 )
currentLevelIndex = 2

[node name="Levels" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Level1" parent="Levels" instance=ExtResource( 1 )]

[node name="Level2" parent="Levels" instance=ExtResource( 4 )]

[node name="Level3" parent="Levels" instance=ExtResource( 6 )]

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 711, 121 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="MusicManager" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true
script = ExtResource( 9 )
gameTracks = {
false: ExtResource( 7 ),
true: ExtResource( 8 )
}

[connection signal="end_touched" from="Levels" to="." method="_on_Levels_end_touched"]
[connection signal="end_touched" from="Levels/Level1" to="Levels" method="_on_Level1_end_touched"]
[connection signal="end_touched" from="Levels/Level2" to="Levels" method="_on_Level2_end_touched"]
[connection signal="end_touched" from="Levels/Level3" to="Levels" method="_on_Level3_end_touched"]
